# domainslm

./: .gitignore  GEMINI.md  bake_lora.py  eda.py  eval.py  eval_model.py  evaluate_sql_agent.py  generate_reflections.py  multidoc.py  my_agent.py  pyproject.toml  run_benchmarks.py  sql_agent.py  sql_agent_rewrite.py  start_vllm.py  train_sft.py  train_sql_agent.py
benchmark/: casehold.py  unfair_tos.py
domainslm/: async_util.py  openai_util.py  vllm.py
domainslm/openai_util/: agent.py  runresult.py
domainslm/spider/: env.py  reflection.py  sft_sample.py  sql_agent.py
spider_eval/: exec_eval.py  parse.py
